# SFCGAL

./: CMakeLists.txt
include/SFCGAL/: Coordinate.h  Envelope.h  Geometry.h  Point.h  PointVisitor.h  SharedCoordinateFactory.h  Transform.h  export.h
include/SFCGAL/algorithm/: orientation.h
include/SFCGAL/detail/: GetCoordinatesVisitor.h  LessSharedPtr.h  MakeSharedVisitor.h
include/SFCGAL/io/: WktReader.h
include/SFCGAL/transform/: AffineTransform2.h  ForceOrderPoints.h  ForceZ.h  ForceZOrderPoints.h  RoundTransform.h
include/SFCGAL/triangulate/: ConstraintDelaunayTriangulation.h
src/: CMakeLists.txt
src/SFCGAL/: Envelope.cpp  Geometry.cpp  Point.cpp  PointVisitor.cpp  SharedCoordinateFactory.cpp  Transform.cpp
src/SFCGAL/algorithm/: collectionToMulti.cpp  force3D.cpp  translate.cpp
src/SFCGAL/capi/: sfcgal_c.cpp
src/SFCGAL/detail/: GetCoordinatesVisitor.cpp  MakeSharedVisitor.cpp
src/SFCGAL/generator/: hoch.cpp
src/SFCGAL/io/: WktReader.cpp
src/SFCGAL/transform/: ForceOrderPoints.cpp  ForceZ.cpp  ForceZOrderPoints.cpp  RoundTransform.cpp
src/SFCGAL/triangulate/: ConstraintDelaunayTriangulation.cpp
test/: CMakeLists.txt
test/bench/: BenchSharedCoordinateFactory.cpp
test/regress/standalone/SFCGAL/: AreaTest.cpp
test/unit/SFCGAL/: EnvelopeTest.cpp
test/unit/SFCGAL/algorithm/: IntersectionTest.cpp  IntersectsTest.cpp
test/unit/SFCGAL/detail/: GetCoordinatesVisitorTest.cpp
test/unit/SFCGAL/transform/: AffineTransform2Test.cpp
viewer/: CMakeLists.txt
